set endpoints
